<resources>
    <string name="app_name">AstroWeather</string>

    <string name="sun_fragment">Hello sun!</string>
    <string name="moon_fragment">Hello moon!</string>

    <string name="time_clock">20:01:36</string>

    <string name="desc_moon">Moon image</string>
    <string name="desc_sun">Sun image</string>

    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

    <string name="moonrise">Moonrise</string>
    <string name="sunset_of_moon">Sunset of the Moon</string>
    <string name="new_moon">New Moon</string>
    <string name="full_moon">Full Moon</string>
    <string name="phase_moon">Phase of the Moon</string>
    <string name="day_of_synodic_month">Day of the synodic month</string>

    <string name="empty">Empty</string>
    <string name="time">Time: </string>
    <string name="day">Day: </string>
    <string name="percentage">Percentage: </string>
    <string name="date">Date: </string>
    <string name="azimuth">Azimuth: </string>
    <string name="civil_dawn">Civil dawn</string>
    <string name="morning">Morning: </string>
    <string name="evening">"Evening: "</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing_time">Refreshing interval</string>
    <string name="preferences">preferences</string>
    <string name="latitude_key">latitude_key</string>

</resources>