<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/location">

        <EditTextPreference
            app:key="latitude"
            app:title="@string/latitude"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="longitude"
            app:title="@string/longitude"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/refresh">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/time_entries"
            app:entryValues="@array/time_values"
            app:key="time"
            app:title="@string/refreshing_time"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


</PreferenceScreen>